--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -316,20 +316,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_name = \"zerotopandas-course-project-starter\" # change this (use lowercase letters and hyphens only)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install jovian --upgrade -q"
+    "project_name = \"hybrid-era-analysis\"\n",
+    "project_file = \"Hybrid_Era_Analysis.ipynb\""
    ]
   },
   {
@@ -338,12 +330,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install jovian --upgrade -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "if (window.IPython && IPython.notebook.kernel) IPython.notebook.kernel.execute('jovian.utils.jupyter.get_notebook_name_saved = lambda: \"' + IPython.notebook.notebook_name + '\"')"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "import jovian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -359,15 +373,48 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31m[jovian] Error: The current API key is invalid or expired.\u001b[0m\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[jovian] Attempting to save notebook..\u001b[0m\n"
+      "[jovian] Please enter your API key ( from https://jovian.ai/ ):\u001b[0m\n",
+      "API KEY:"
      ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "  ·························································································································································································································································································································\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[jovian] Creating a new project \"zoibderg/hybrid-era-analysis\"\u001b[0m\n",
+      "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "jovian.commit(project=project_name)"
+    "jovian.commit(project=project_name, filename=project_file)"
    ]
   },
   {
