add additional files to jovian

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -373,32 +373,25 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[jovian] Updating notebook \"zoibderg/hybrid-era-analysis\" on https://jovian.ai/\u001b[0m\n",
+      "[jovian] Uploading additional files...\u001b[0m\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[31m[jovian] Error: The current API key is invalid or expired.\u001b[0m\n"
+      "\u001b[31m[jovian] Error: File upload failed: (HTTP 400) Invalid filename or extension (README.md)\u001b[0m\n",
+      "\u001b[31m[jovian] Error: File upload failed: (HTTP 400) Invalid filename or extension (SUMMARY.md)\u001b[0m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[jovian] Please enter your API key ( from https://jovian.ai/ ):\u001b[0m\n",
-      "API KEY:"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "  ·························································································································································································································································································································\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[jovian] Creating a new project \"zoibderg/hybrid-era-analysis\"\u001b[0m\n",
       "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
      ]
     },
@@ -408,13 +401,13 @@
        "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jovian.commit(project=project_name, filename=project_file)"
+    "jovian.commit(project=project_name, filename=project_file, files=[\"README.md\", \"SUMMARY.md\", \"explore_ergast.py\"])"
    ]
   },
   {
