intagrate readme into notebook as cannot upload markdown files to jovian

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -4,132 +4,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Analysis with Python: Zero to Pandas - Course Project Guidelines\n",
-    "#### (remove this cell before submission)\n",
+    "# 🏎 Formula 1 'Hybrid Era' Analysis\n",
     "\n",
-    "Important links:\n",
-    "- Make submissions here: https://jovian.ml/learn/data-analysis-with-python-zero-to-pandas/assignment/course-project\n",
-    "- Ask questions here: https://jovian.ml/forum/t/course-project-on-exploratory-data-analysis-discuss-and-share-your-work/11684\n",
-    "- Find interesting datasets here: https://jovian.ml/forum/t/recommended-datasets-for-course-project/11711\n",
+    "<figure><img src=\".gitbook/assets/JPG-RGB-F1_70_Number_HotRed_Standard_RGB-1024x302.jpg\" alt=\"\"><figcaption></figcaption></figure>\n",
     "\n",
+    "### About the Dataset\n",
     "\n",
-    "This is the starter notebook for the course project for [Data Analysis with Python: Zero to Pandas](https://jovian.ml/learn/data-analysis-with-python-zero-to-pandas). You will pick a real-world dataset of your choice and apply the concepts learned in this course to perform exploratory data analysis. Use this starter notebook as an outline for your project . Focus on documentation and presentation - this Jupyter notebook will also serve as a project report, so make sure to include detailed explanations wherever possible using Markdown cells.\n",
+    "#### Context\n",
     "\n",
-    "### Evaluation Criteria\n",
+    "Formula 1 (a.k.a. F1 or Formula One) is the highest class of single-seater auto racing sanctioned by the Fédération Internationale de l'Automobile (FIA) and owned by the Formula One Group. The FIA Formula One World Championship has been one of the premier forms of racing around the world since its inaugural season in 1950. The word \"formula\" in the name refers to the set of rules to which all participants' cars must conform. A Formula One season consists of a series of races, known as Grands Prix, which take place worldwide on purpose-built circuits and on public roads.\n",
     "\n",
-    "Your submission will be evaluated using the following criteria:\n",
+    "#### Content\n",
     "\n",
-    "* Dataset must contain at least 3 columns and 150 rows of data\n",
-    "* You must ask and answer at least 4 questions about the dataset\n",
-    "* Your submission must include at least 4 visualizations (graphs)\n",
-    "* Your submission must include explanations using markdown cells, apart from the code.\n",
-    "* Your work must not be plagiarized i.e. copy-pasted for somewhere else.\n",
+    "The dataset consists of all information on the Formula 1 races, drivers, constructors, qualifying, circuits, lap times, pit stops, championships from 1950 till the latest 2021 season.\n",
     "\n",
+    "## What is the Hybird Era?\n",
     "\n",
-    "Follow this step-by-step guide to work on your project.\n",
+    "### 2014-2021\n",
     "\n",
+    "The year 2014 ushered in the most significant rule changes in F1 history, with normally aspirated, 2.4-liter V8 engines replaced by new, 1.6-liter turbocharged V6 “power units” (no longer officially called engines) integrated with complex, hybrid energy recovery systems (ERS) that FIA claimed “gave the sport a much cleaner and greener image more relevant to developing road car technologies.”&#x20;\n",
     "\n",
-    "### Step 1: Select a real-world dataset \n",
+    "The new formula allows turbocharged engines, which last appeared in 1988. These have their efficiency improved through turbo-compounding by recovering energy from exhaust gases. The original proposal for four-cylinder turbocharged engines was not welcomed by the racing teams, in particular Ferrari. A compromise was reached, allowing V6 forced induction engines instead. The engines rarely exceed 12,000 rpm during qualifying and race, due to the new fuel flow restrictions.\n",
     "\n",
-    "- Find an interesting dataset on this page: https://www.kaggle.com/datasets?fileType=csv\n",
-    "- The data should be in CSV format, and should contain at least 3 columns and 150 rows\n",
-    "- Download the dataset using the [`opendatasets` Python library](https://github.com/JovianML/opendatasets#opendatasets)\n",
+    "Energy recovery systems such as KERS had a boost of 160 hp (120 kW) and 2 megajoules per lap. KERS was renamed Motor Generator Unit–Kinetic (MGU-K). Heat energyrecovery systems were also allowed, under the name Motor Generator Unit–Heat (MGU-H)\n",
     "\n",
-    "Here's some sample code for downloading the [US Elections Dataset](https://www.kaggle.com/tunguz/us-elections-dataset):\n",
+    "The 2015 season was an improvement on 2014, adding about 30–50 hp (20–40 kW) to most engines, the Mercedes engine being the most powerful with 870 hp (649 kW). In 2019, Renault's engine was claimed to have hit 1,000 hp in qualifying trim.\n",
     "\n",
-    "```\n",
-    "import opendatasets as od\n",
-    "dataset_url = 'https://www.kaggle.com/tunguz/us-elections-dataset'\n",
-    "od.download('https://www.kaggle.com/tunguz/us-elections-dataset')\n",
-    "```\n",
+    "### 2022\n",
     "\n",
-    "You can find a list of recommended datasets here: https://jovian.ml/forum/t/recommended-datasets-for-course-project/11711\n",
+    "In 2017, the FIA began negotiations with existing constructors and potential new manufacturers over the next generation of engines with a projected introduction date of 2021 but delayed to 2022 due to the effects of the COVID-19 pandemic. The initial proposal was designed to simplify engine designs, cut costs, promote new entries and address criticisms directed at the 2014 generation of engines. It called for the 1.6 L V6 configuration to be retained, but abandoned the complex Motor Generator Unit–Heat (MGU-H) system. The Motor Generator Unit–Kinetic (MGU-K) would be more powerful, with a greater emphasis on driver deployment and a more flexible introduction to allow for tactical use.&#x20;\n",
     "\n",
-    "### Step 2: Perform data preparation & cleaning\n",
+    "The proposal also called for the introduction of standardised components and design parameters to make components produced by all manufacturers compatible with one another in a system dubbed \"plug in and play\". A further proposal to allow four-wheel drive cars was also made, with the front axle driven by an MGU-K unit—as opposed to the traditional driveshaft—that functioned independently of the MGU-K providing power to the rear axle, mirroring the system developed by Porsche for the 919 Hybrid race car.\n",
     "\n",
-    "- Load the dataset into a data frame using Pandas\n",
-    "- Explore the number of rows & columns, ranges of values etc.\n",
-    "- Handle missing, incorrect and invalid data\n",
-    "- Perform any additional steps (parsing dates, creating additional columns, merging multiple dataset etc.)\n",
-    "\n",
-    "\n",
-    "### Step 3: Perform exploratory analysis & visualization\n",
-    "\n",
-    "- Compute the mean, sum, range and other interesting statistics for numeric columns\n",
-    "- Explore distributions of numeric columns using histograms etc.\n",
-    "- Explore relationship between columns using scatter plots, bar charts etc.\n",
-    "- Make a note of interesting insights from the exploratory analysis\n",
-    "\n",
-    "### Step 4: Ask & answer questions about the data\n",
-    "\n",
-    "- Ask at least 4 interesting questions about your dataset\n",
-    "- Answer the questions either by computing the results using Numpy/Pandas or by plotting graphs using Matplotlib/Seaborn\n",
-    "- Create new columns, merge multiple dataset and perform grouping/aggregation wherever necessary\n",
-    "- Wherever you're using a library function from Pandas/Numpy/Matplotlib etc. explain briefly what it does\n",
-    "\n",
-    "\n",
-    "### Step 5: Summarize your inferences & write a conclusion\n",
-    "\n",
-    "- Write a summary of what you've learned from the analysis\n",
-    "- Include interesting insights and graphs from previous sections\n",
-    "- Share ideas for future work on the same topic using other relevant datasets\n",
-    "- Share links to resources you found useful during your analysis\n",
-    "\n",
-    "\n",
-    "### Step 6: Make a submission & share your work\n",
-    "\n",
-    "- Upload your notebook to your Jovian.ml profile using `jovian.commit`.\n",
-    "- **Make a submission here**: https://jovian.ml/learn/data-analysis-with-python-zero-to-pandas/assignment/course-project\n",
-    "- Share your work on the forum: https://jovian.ml/forum/t/course-project-on-exploratory-data-analysis-discuss-and-share-your-work/11684\n",
-    "- Browse through projects shared by other participants and give feedback\n",
-    "\n",
-    "\n",
-    "### (Optional) Step 7: Write a blog post\n",
-    "\n",
-    "- A blog post is a great way to present and showcase your work.  \n",
-    "- Sign up on [Medium.com](https://medium.com) to write a blog post for your project.\n",
-    "- Copy over the explanations from your Jupyter notebook into your blog post, and [embed code cells & outputs](https://medium.com/jovianml/share-and-embed-jupyter-notebooks-online-with-jovian-ml-df709a03064e)\n",
-    "- Check out the Jovian.ml Medium publication for inspiration: https://medium.com/jovianml\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Example Projects\n",
-    "\n",
-    "Refer to these projects for inspiration:\n",
-    "\n",
-    "* [Analyzing StackOverflow Developer Survey Results](https://jovian.ml/aakashns/python-eda-stackoverflow-survey)\n",
-    "\n",
-    "* [Analyzing Covid-19 data using Pandas](https://jovian.ml/aakashns/python-pandas-data-analysis) \n",
-    "\n",
-    "* [Analyzing your browser history using Pandas & Seaborn](https://medium.com/free-code-camp/understanding-my-browsing-pattern-using-pandas-and-seaborn-162b97e33e51) by Kartik Godawat\n",
-    "\n",
-    "* [WhatsApp Chat Data Analysis](https://jovian.ml/PrajwalPrashanth/whatsapp-chat-data-analysis) by Prajwal Prashanth\n",
-    "\n",
-    "* [Understanding the Gender Divide in Data Science Roles](https://medium.com/datadriveninvestor/exploratory-data-analysis-eda-understanding-the-gender-divide-in-data-science-roles-9faa5da44f5b) by Aakanksha N S\n",
-    "\n",
-    "* [2019 State of Javscript Survey Results](https://2019.stateofjs.com/demographics/)\n",
-    "\n",
-    "* [2020 Stack Overflow Developer Survey Results](https://insights.stackoverflow.com/survey/2020)\n",
-    "\n",
-    "\n",
-    "\n",
-    "**NOTE**: Remove this cell containing the instructions before making your submission. You can do using the \"Edit > Delete Cells\" menu option."
+    "However, mostly due to no engine supplier applying for F1 entry in 2021 and 2022, abolishment of the MGU-H, a more powerful MGU-K and a four-wheel drive system were all shelved with the possibility of their re-introduction for 2026. Instead, the teams and FIA agreed to a radical change in body/chassis aerodynamics to promote more battles on the course at closer distances to each other. They further agreed to an increase in alcohol content from 5.75% to 10% of fuel, and to implement a freeze on power unit design for 2022-2025, with the ICE, turbocharger and MGU-H being frozen on March 1st and the energy store, MGU-K and control electronics being frozen on September 1st during the 2022 season. Honda, the outgoing engine supplier in 2021, was keen to keep the MGU-H, and Red Bull, who took over the engine production project, backed that opinion. The 4WD system was planned to be based on Porsche 919 Hybrid system, but Porsche ended up not becoming an F1 engine supplier for 2021-2022."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Project Title - change this\n",
-    "\n",
-    "TODO - Write some introduction about your project here: describe the dataset, where you got it from, what you're trying to do with it, and which tools & techniques you're using. You can also mention about the course [Data Analysis with Python: Zero to Pandas](zerotopandas.com), and what you've learned from it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### How to run the code\n",
     "\n",
@@ -1058,6 +973,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Resources:\n",
+    "\n",
+    "* [**pyErgast**](https://github.com/weiranyu/pyErgast)**:** Python pandas wrapper for the [Ergast F1 API](http://ergast.com/mrd/). This package allows easy access to the Ergast API for anyone wishing to conduct analysis on Formula 1 data.\n",
+    "* [**Ergast API**](http://ergast.com/mrd/)**:** The Ergast Developer API is an experimental [web service](http://en.wikipedia.org/wiki/Web\\_service) which provides a historical record of motor racing data for non-commercial purposes. Please read the [terms and conditions of use](http://ergast.com/mrd/terms). The API provides data for the [Formula One](http://en.wikipedia.org/wiki/Formula\\_One)series, from the beginning of the world championships in 1950.\n",
+    "\n",
+    "#### &#x20;                                                                                          Usage\n",
+    "\n",
+    "Use of the Ergast API is completely free, but you are welcome to [contribute to the annual running costs](https://liberapay.com/ergast). Any contributions above the actual costs will be donated to the [Grand Prix Trust](https://www.grandprixtrust.com/).\n",
+    "\n",
+    "<figure><img src=\"https://liberapay.com/assets/widgets/donate.svg\" alt=\"\"><figcaption></figcaption></figure>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -1068,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -1089,26 +1021,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[jovian] Attempting to save notebook..\u001b[0m\n",
-      "[jovian] Updating notebook \"aakashns/zerotopandas-course-project-starter\" on https://jovian.ml/\u001b[0m\n",
-      "[jovian] Uploading notebook..\u001b[0m\n",
-      "[jovian] Capturing environment..\u001b[0m\n",
-      "[jovian] Committed successfully! https://jovian.ml/aakashns/zerotopandas-course-project-starter\u001b[0m\n"
+      "[jovian] Updating notebook \"zoibderg/hybrid-era-analysis\" on https://jovian.ai/\u001b[0m\n",
+      "[jovian] Uploading additional files...\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31m[jovian] Error: File upload failed: (HTTP 400) Invalid filename or extension (README.md)\u001b[0m\n",
+      "\u001b[31m[jovian] Error: File upload failed: (HTTP 400) Invalid filename or extension (SUMMARY.md)\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'https://jovian.ml/aakashns/zerotopandas-course-project-starter'"
+       "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jovian.commit()"
+    "jovian.commit(project=project_name, filename=project_file, files=[\"README.md\", \"SUMMARY.md\", \"explore_ergast.py\"])"
    ]
   },
   {
