fixed logo display in notebook

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# 🏎 Formula 1 'Hybrid Era' Analysis\n",
     "\n",
-    "<figure><img src=\".gitbook/assets/JPG-RGB-F1_70_Number_HotRed_Standard_RGB-1024x302.jpg\" alt=\"\"><figcaption></figcaption></figure>\n",
+    "<img src=\"JPG-RGB-F1_70_Number_HotRed_Standard_RGB-1024x302.jpg\">\n",
     "\n",
     "### About the Dataset\n",
     "\n",
