small file restructure

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "## Downloading the Dataset\n",
     "\n",
-    "**TODO** - add some explanation here"
+    "We will be using pyergast to for "
    ]
   },
   {
