init pyergast in notebook

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -92,136 +92,30 @@
    "source": [
     "## Downloading the Dataset\n",
     "\n",
-    "We will be using pyergast to for "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Instructions for downloading the dataset (delete this cell)\n",
-    ">\n",
-    "> - Find an interesting dataset on this page: https://www.kaggle.com/datasets?fileType=csv\n",
-    "> - The data should be in CSV format, and should contain at least 3 columns and 150 rows\n",
-    "> - Download the dataset using the [`opendatasets` Python library](https://github.com/JovianML/opendatasets#opendatasets)"
+    "We will be using pyergast to for access to the Formula 1 database provided by Ergast API. Pyergast gives us direct access to the database, with no need to downlowd a CSV or any other files. \n",
+    "\n",
+    "The \"explore_pyergast.py\" file will dive into pyergast's features and do some minor exploration in the data to gain familirity with the pyergast commands. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install jovian opendatasets --upgrade --quiet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's begin by downloading the data, and listing the files within the dataset."
+    "!pip install pyergast --upgrade --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change this\n",
-    "dataset_url = 'https://www.kaggle.com/tunguz/us-elections-dataset' "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kaggle dataset ID:  tunguz/us-elections-dataset\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://www.kaggle.com/tunguz/us-elections-dataset/download?resource=download&downloadHash=7ba6986e70e4d0e9f17ef767bfef5a5fc294114a206832fd436474dafb200649 to ./us-elections-dataset.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "37806080it [00:03, 12417556.13it/s]                              \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting archive ./us-elections-dataset.zip to ./us-elections-dataset\n"
-     ]
-    }
-   ],
-   "source": [
-    "import opendatasets as od\n",
-    "od.download(dataset_url)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The dataset has been downloaded and extracted."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Change this\n",
-    "data_dir = './us-elections-dataset'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2016-precinct-house.csv',\n",
-       " '1976-2018-house2.csv',\n",
-       " 'president-1976-2016.csv',\n",
-       " '1976-2018-senate.csv',\n",
-       " '2016-precinct-president.csv',\n",
-       " 'us-2016-primary-results.csv',\n",
-       " '2016-precinct-senate.csv',\n",
-       " '2012_US_elect_county.csv',\n",
-       " 'usa-2016-presidential-election-by-county.csv']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.listdir(data_dir)"
+    "# pyergast requires both numpy and pandas\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pyergast import pyergast"
    ]
   },
   {
@@ -233,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -318,13 +212,13 @@
        "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jovian.commit(project=project_name, filename=project_file, files=[\"README.md\", \"SUMMARY.md\", \"explore_ergast.py\"])"
+    "jovian.commit(project=project_name, filename=project_file, files=[\"README.md\", \"SUMMARY.md\", \"explore_ergast.py\", \"notebook_source\"])"
    ]
   },
   {
