hopefully fixed gitignore

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -962,6 +962,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ce5d4c5ce0eae8759d521230ff7b88377fa62fb91656e5c2966f4bb1fdd362b7"
+   }
   }
  },
  "nbformat": 4,
