--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -103,8 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade pip --quiet\n",
-    "!pip install pyergast --upgrade --quiet"
+    "%pip install -upgrade pip -quiet\n",
+    "%pip install pyergast -upgrade -quiet"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install jovian --upgrade -q"
+    "%pip install jovian --upgrade -q"
    ]
   },
   {
@@ -344,7 +344,7 @@
     "# LOAD HYBRID ERA DATA\n",
     "# Gather schedule\n",
     "# Gather telemetry\n",
-    "class HybridData:\n",
+    "class FormulaOneData:\n",
     "    fastf1.Cache.enable_cache('./cache')   # optional but recommended\n",
     "\n",
     "    def __init__(self, start, end):\n",
@@ -388,7 +388,7 @@
     "            result = gp.results\n",
     "            self.race_data = {event: result}\n",
     "\n",
-    "hybrid_data = HybridData(2020, 2021)\n",
+    "hybrid_data = FormulaOneData(2020, 2021)\n",
     "hybrid_data.get_schs()\n",
     "hybrid_data.get_events()\n",
     "hybrid_data.get_race_data(year=2020, event='Portuguese Grand Prix')\n",
@@ -399,9 +399,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[jovian] Updating notebook \"zoibderg/hybrid-era-analysis\" on https://jovian.ai/\u001b[0m\n",
+      "[jovian] Uploading additional files...\u001b[0m\n",
+      "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# LETS MAKE ANOTHER JOVIAN COMMIT\n",
     "jovian.commit(project=project_name, filename=project_file, files=[\"explore_ergast.py\",\"explore_ergastpy.py\", \"notebook_source\", \"cache\"])"
